# mirror-lambda-environment

./: Pipfile  README.md  pyproject.toml  requirements.txt  tox.ini
mirror_lambda_environment/: __init__.py  decorator.py  utils.py
tests/: test_mirror.py
