# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inject-environment-variables"
version = "1.0.0"
description = "Simple tools for temporatily injecting variables into the environment"
readme = "README.md"
authors = [{ name = "Tayler Kemsley"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "boto3 ==1.36.4",
    "inject-environment-variables >= 1.1.0",
    "simple-term-menu ==1.6.6"

]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = ["tox", "pytest", "mypy", "flake8"]
